--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "16.14.2"
+    "nodemon": "^2.0.0"
   }
 }
