--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^9.0.0",
      "mongoose": "^7.4.5",
     "nodemon": "^2.0.0"
-  }
+  },
+  "engines": {
+      "node": ">=14.20.1"
+    },
 }
